--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -216,7 +216,35 @@ services:
       redis:
         condition: service_healthy
 
-  # Memory Analyzer Service
+  # Neo4j Database for Graphiti Knowledge Graph
+  neo4j:
+    image: neo4j:5.15-community
+    container_name: mcp_neo4j
+    restart: unless-stopped
+    environment:
+      - NEO4J_AUTH=neo4j/${NEO4J_PASSWORD:-neo4j_secure_password_2024}
+      - NEO4J_PLUGINS=["apoc"]
+      - NEO4J_dbms_security_procedures_unrestricted=apoc.*
+      - NEO4J_dbms_memory_heap_initial__size=512m
+      - NEO4J_dbms_memory_heap_max__size=2G
+      - NEO4J_dbms_memory_pagecache_size=1G
+    volumes:
+      - neo4j_data:/data
+      - neo4j_logs:/logs
+      - neo4j_import:/var/lib/neo4j/import
+      - neo4j_plugins:/plugins
+    ports:
+      - "7474:7474"  # Neo4j Browser
+      - "7687:7687"  # Bolt protocol
+    networks:
+      - mcp_network
+    healthcheck:
+      test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "${NEO4J_PASSWORD:-neo4j_secure_password_2024}", "RETURN 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  # Enhanced Memory Analyzer with Graphiti
   mcp_memory:
     build:
       context: .
@@ -226,11 +254,16 @@ services:
     environment:
       - DATABASE_URL=postgresql://mcp_user:${POSTGRES_PASSWORD:-mcp_secure_password_2024}@postgres:5432/mcp_enterprise
       - REDIS_URL=redis://:${REDIS_PASSWORD:-redis_secure_password_2024}@redis:6379
+      - NEO4J_URI=bolt://neo4j:7687
+      - NEO4J_USERNAME=neo4j
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD:-neo4j_secure_password_2024}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - MEMORY_SERVICE_PORT=8767
     volumes:
       - ./logs:/app/logs
       - ./memory_data:/app/data
+      - ./langgraph_system:/app/langgraph_system
     ports:
       - "8767:8767"
     networks:
@@ -239,6 +272,8 @@ services:
       postgres:
         condition: service_healthy
       redis:
+        condition: service_healthy
+      neo4j:
         condition: service_healthy
 
   # Nginx Reverse Proxy con SSL
@@ -285,6 +320,14 @@ volumes:
   prometheus_data:
     driver: local
   grafana_data:
+    driver: local
+  neo4j_data:
+    driver: local
+  neo4j_logs:
+    driver: local
+  neo4j_import:
+    driver: local
+  neo4j_plugins:
     driver: local
 
 networks:
